enabled Java21 preview features